Image size fixed on mobiles

--- a/_sass/jekyll-theme-cayman-blog.scss
+++ b/_sass/jekyll-theme-cayman-blog.scss
@@ -91,7 +91,11 @@ a {
   color: $header-heading-color;
   text-align: center;
   background-color: $header-bg-color;
-  background-image: linear-gradient(120deg, $header-bg-color-secondary, $header-bg-color);
+  background-image: linear-gradient(
+    120deg,
+    $header-bg-color-secondary,
+    $header-bg-color
+  );
 
   @include large {
     padding: 5rem 6rem;
@@ -103,6 +107,11 @@ a {
 
   @include small {
     padding: 2rem 1rem;
+  }
+
+  img {
+    max-height: 10rem;
+    width: auto;
   }
 }
 
@@ -148,7 +157,7 @@ a {
   font-style: italic;
 
   @include large {
-    font-size: 1.0rem;
+    font-size: 1rem;
   }
 
   @include medium {
@@ -186,6 +195,12 @@ a {
 
   img {
     max-width: 100%;
+  }
+
+  blockquote img {
+    max-height: 3rem;
+    width: auto;
+    padding-right: 1.5rem;
   }
 
   h1,
@@ -366,7 +381,6 @@ a {
 }
 
 .site-footer {
-
   @include large {
   }
 
@@ -377,9 +391,8 @@ a {
   }
 
   .my-span-icon {
-
     a {
-    	text-decoration: none;
+      text-decoration: none;
     }
     a:hover {
       text-decoration: none;
@@ -400,7 +413,6 @@ a {
   }
 
   .my-svg-icon {
-
     color: $body-text-color; // IE8
     fill: $body-text-color; // IE8
     width: 24px;
@@ -411,7 +423,7 @@ a {
       color: $section-headings-color; // IE8
       fill: $section-headings-color;
       transform: scale(1.25);
-      transition: color .5s, transform .2s ease-out
+      transition: color 0.5s, transform 0.2s ease-out;
     }
 
     @include large {
@@ -428,7 +440,5 @@ a {
       width: 36px;
       height: 36px;
     }
-
   } // social-icons
-
 }
